--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,9 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #F2DFF0;
+  border-bottom: 1px solid #dcadde;
+  padding-bottom: 0.5rem;
+  color: #dcadde;
 }
 
 li{
