--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,64 @@ li{
   text-align: left;
 }
 
+/* *********** */
+/* START AddTodoForm CSS Style */
+form{
+  text-align: left;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+label{
+  font-size: larger;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+input[type=text], select {
+  align-self: center;
+  width: 90%;
+  padding: 10px 15px;
+  margin: 8px 0;
+  font-size: 0.95rem;
+  border: 1px solid #dcadde;
+  border-radius: 15px;
+  box-sizing: border-box;
+  transition: 1s ease;
+}
+
+input[type=text]:focus {
+  border: 2px solid #dcadde;
+  outline: none;
+  caret-color: #dcadde;
+}
+
+button[type=submit]{
+  width: 50%;
+  align-self: center;
+  font-size: .95rem;
+  font-weight: 600;
+  padding: 5px 15px;
+  cursor: pointer;
+  background-color:#dcadde;
+  color: #242424;
+  border: none;
+  border-radius: 10px;
+  transition: all 1s ease;
+}
+
+button[type=submit]:hover{
+  transform: scale(1.03);
+  background-color:#242424;
+  color: #dcadde;
+  border: 1px solid #dcadde;
+  box-shadow: #dcadde 0px 10px 20px 0px, #dcadde 0px 0px 0px 1px;
+  font-weight: 700;
+}
+/* END AddTodoForm CSS Style */
+/* *********** */
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
